Fixed images length too wide

--- a/scss/_orange-theme.scss
+++ b/scss/_orange-theme.scss
@@ -91,7 +91,7 @@ footer {
         cursor: pointer;
     }
     img {
-        height: auto;
+        height: 100px;
         max-width: 100%;
         &:hover {
             filter: opacity(0.5);
